# rupe

./: .gitignore  CMakeLists.txt  vcpkg.json
diagrams/math/: classes.puml
diagrams/physics/: classes.puml
include/math/: Concepts.hpp  Vector3.hpp
include/physics/: Particle.hpp
include/rupe/math/: Concepts.hpp
src/physics/: Particle.cpp
tests/math/: Vector3.test.cpp
